docs/tests/nameres/expressions/valid/Member.src
// Valid

struct S {
    let int i = 0;
}

let S struct1;

fn void main() {
    struct1.i = 0;
}