docs/tests/nameres/expressions/invalid/MemberSafeDoesntExist.src
// Invalid

fn void main() {
    struct1.?i = 0;     
}
